--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "Обновить страницу": "Обновить страницу",
   "throw error": "throw error",
   "Главная": "Main",
-  "О сайте": "About us"
+  "О сайте": "About us",
+  "Короткий язык": "En"
 }
