add profile page, add select, add avatar

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,6 +1,14 @@
 {
-  "Профиль": "Профиль",
-  "Редактировать": "Редактировать",
-  "Ваше имя": "Ваше имя",
-  "Ваше фамилия": "Ваше фамилия"
+  "Профиль": "Profile",
+  "Редактировать": "Edit",
+  "Ваше имя": "Your name",
+  "Ваше фамилия": "Your last name",
+  "Произошла ошибка при загрузке профиля": "An error occurred while loading the profile",
+  "Попробуйте обновить страницу": "Try refreshing the page",
+  "Отменить": "Cancel",
+  "Сохранить": "Save",
+  "Ваше возраст": "Your age",
+  "Город": "City",
+  "Введите имя пользователя": "Enter the username",
+  "Введите ссылку на аватар": "Enter the link to the avatar"
 }
