--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,7 @@
   "throw error": "throw error",
   "Главная": "Главная",
   "О сайте": "О сайте",
+  "Профиль": "Профиль",
   "Короткий язык": "Ru",
   "Войти": "Войти",
   "increment": "increment",
@@ -15,5 +16,7 @@
   "Форма авторизации": "Форма авторизации",
   "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
   "Выйти": "Выйти",
-  "PROFILE PAGE": "PROFILE PAGE"
+  "PROFILE PAGE": "PROFILE PAGE",
+  "Укажите валюту": "Укажите валюту",
+  "Укажите страну": "Укажите страну"
 }
