add profile page, add select, add avatar

--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -10,5 +10,5 @@
   "Ваше возраст": "Ваше возраст",
   "Город": "Город",
   "Введите имя пользователя": "Введите имя пользователя",
-  "Введите ссылку на аватар": "Введите ссылку на аватар",
+  "Введите ссылку на аватар": "Введите ссылку на аватар"
 }
