add unit tests for profile page

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -10,5 +10,10 @@
   "Ваше возраст": "Your age",
   "Город": "City",
   "Введите имя пользователя": "Enter the username",
-  "Введите ссылку на аватар": "Enter the link to the avatar"
+  "Введите ссылку на аватар": "Enter the link to the avatar",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
+  "Некорректный регион": "Некорректный регион",
+  "Данные не указаны": "Данные не указаны",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Некорректный возраст": "Некорректный возраст"
 }
