--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,7 @@
   "PROFILE PAGE": "PROFILE PAGE",
   "Укажите валюту": "Specify the currency",
   "Укажите страну": "Specify the country",
-  "Комментарии отсутствуют": "Комментарии отсутствуют"
+  "Комментарии отсутствуют": "Комментарии отсутствуют",
+  "Введите текст комментария": "Введите текст комментария",
+  "Отправить": "Отправить"
 }
