--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,23 +1,23 @@
 {
-  "Статья не найдена": "Статья не найдена",
-  "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
-  "Комментарии": "Комментарии",
-  "Назад к списку": "Назад к списку",
-  "Сортировать ПО": "Сортировать ПО",
-  "Поиск": "Поиск",
-  "по": "по",
-  "возрастанию": "возрастанию",
-  "убыванию": "убыванию",
-  "дате создания": "дате создания",
-  "названию": "названию",
-  "просмотрам": "просмотрам",
-  "Айти": "Айти",
-  "Все статьи": "Все статьи",
-  "Экономика": "Экономика",
-  "Наука": "Наука",
-  "Статьи не найдены": "Статьи не найдены",
-  "Рекомендуем": "Рекомендуем",
-  "Редактировать": "Редактировать",
-  "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
-  "Создание новой статьи": "Создание новой статьи"
+  "Статья не найдена": "Article not found",
+  "Произошла ошибка при загрузке статьи": "An error occurred while loading the article",
+  "Комментарии": "Comments",
+  "Назад к списку": "Back to the list",
+  "Сортировать ПО": "Sort BY",
+  "Поиск": "Search",
+  "по": "by",
+  "возрастанию": "ascending",
+  "убыванию": "descending",
+  "дате создания": "date of creation",
+  "названию": "name",
+  "просмотрам": "views",
+  "Айти": "IT",
+  "Все статьи": "All articles",
+  "Экономика": "Economy",
+  "Наука": "The science",
+  "Статьи не найдены": "Articles not found",
+  "Рекомендуем": "We recommend",
+  "Редактировать": "Edit",
+  "Редактирование статьи с ID = ": "Editing an article with ID = ",
+  "Создание новой статьи": "Creating a new article"
 }
