--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -11,9 +11,9 @@
   "Город": "City",
   "Введите имя пользователя": "Enter the username",
   "Введите ссылку на аватар": "Enter the link to the avatar",
-  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
-  "Некорректный регион": "Некорректный регион",
-  "Данные не указаны": "Данные не указаны",
-  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
-  "Некорректный возраст": "Некорректный возраст"
+  "Серверная ошибка при сохранении": "Server error when saving",
+  "Некорректный регион": "Invalid region",
+  "Данные не указаны": "Data is not specified",
+  "Имя и фамилия обязательны": "First and last name are required",
+  "Некорректный возраст": "Incorrect age"
 }
