--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,10 +19,10 @@
   "PROFILE PAGE": "PROFILE PAGE",
   "Укажите валюту": "Specify the currency",
   "Укажите страну": "Specify the country",
-  "Комментарии отсутствуют": "Комментарии отсутствуют",
-  "Введите текст комментария": "Введите текст комментария",
-  "Отправить": "Отправить",
-  "Читать далеe": "Читать далеe",
+  "Комментарии отсутствуют": "There are no comments",
+  "Введите текст комментария": "Enter the comment text",
+  "Отправить": "Send",
+  "Читать далеe": "Read more",
   "App": "App",
-  "Создать статью": "Создать статью"
+  "Создать статью": "Create an article"
 }
