--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,5 +24,6 @@
   "Отправить": "Send",
   "Читать далеe": "Read more",
   "App": "App",
-  "Создать статью": "Create an article"
+  "Создать статью": "Create an article",
+  "Статьи": "Articles"
 }
