--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -19,5 +19,6 @@
   "Рекомендуем": "We recommend",
   "Редактировать": "Edit",
   "Редактирование статьи с ID = ": "Editing an article with ID = ",
-  "Создание новой статьи": "Creating a new article"
+  "Создание новой статьи": "Creating a new article",
+  "Ошибка при загрузке статей": "Ошибка при загрузке статей"
 }
