--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -15,5 +15,6 @@
   "Некорректный регион": "Invalid region",
   "Данные не указаны": "Data is not specified",
   "Имя и фамилия обязательны": "First and last name are required",
-  "Некорректный возраст": "Incorrect age"
+  "Некорректный возраст": "Incorrect age",
+  "Профиль не найден": "Профиль не найден"
 }
