migration to react 18

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,5 +25,7 @@
   "Читать далеe": "Read more",
   "App": "App",
   "Создать статью": "Create an article",
-  "Статьи": "Articles"
+  "Статьи": "Articles",
+  "Админка": "Админка",
+  "У Вас нет доступа к этой странице": "У Вас нет доступа к этой странице"
 }
