--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,5 +24,7 @@
   "Отправить": "Отправить",
   "Читать далеe": "Читать далеe",
   "App": "App",
-  "Создать статью": "Создать статью"
+  "Создать статью": "Создать статью",
+  "Админка": "Админка",
+  "У Вас нет доступа к этой странице": "У Вас нет доступа к этой странице"
 }
