--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,5 +27,11 @@
   "Создать статью": "Create an article",
   "Статьи": "Articles",
   "Админка": "Админка",
-  "У Вас нет доступа к этой странице": "У Вас нет доступа к этой странице"
+  "У Вас нет доступа к этой странице": "У Вас нет доступа к этой странице",
+  "Ваш отзыв": "Ваш отзыв",
+  "Закрыть": "Закрыть",
+  "Отправить": "Отправить",
+  "Оцените статью": "Оцените статью",
+  "Оставьте свой отзыв о статье, это поможет улучшить качество": "Оставьте свой отзыв о статье, это поможет улучшить качество",
+  "Спасибо за оценку!": "Спасибо за оценку!"
 }
