--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,5 +26,11 @@
   "App": "App",
   "Создать статью": "Создать статью",
   "Админка": "Админка",
-  "У Вас нет доступа к этой странице": "У Вас нет доступа к этой странице"
+  "У Вас нет доступа к этой странице": "У Вас нет доступа к этой странице",
+  "Ваш отзыв": "Ваш отзыв",
+  "Закрыть": "Закрыть",
+  "Отправить": "Отправить",
+  "Оцените статью": "Оцените статью",
+  "Оставьте свой отзыв о статье, это поможет улучшить качество": "Оставьте свой отзыв о статье, это поможет улучшить качество",
+  "Спасибо за оценку!": "Спасибо за оценку!"
 }
